2012-05-30 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/export_csv.php: Fixed csv events exportation 
	query.

2012-05-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php: Duplicate the operations
	too when duplicate a synthetic module for bug 
	Merged from 4.0.x

2012-05-30  Sergio Martin <sergio.martin@artica.es>

	* include/constants.php: Add new error control
	constant to connection errors

2012-05-30  Vanessa Gil <vanessa.gil@artica.es>

	* pandoradb.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.oracle.sql
	  pandoradb_data.sql
	  pandoradb.data.oracle.sql
	  pandoradb.data.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql
	  index.php
	  godmode/users/configure_user.php
	  include/functions_config.php
	  include/auth/mysql.php
	  include/javascript/jquery.pandora.js: Added admin users to password policy
	and added password history.

2012-05-30  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Added to API a test function
	to test the API connection returning OK when success

2012-05-30 Dario Rodriguez <dario@artica.es>

        * include/functions_reporting.php: Fixed group view,
        unkown agent count was wrong.

	MERGED PANDORA 4.0.2

2012-05-30  Hirofumi Kosaka  <kosaka@rworks.jp>

	* godmode/db/db_main.php: Tiny bug fix. The number of log4x
	turns red when tagente_datos (not tagente_datos_log4x) is more
	than the threshold (max_data).

2012-05-29  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: added "event_type" to the
	get_events filters. Some fixes.

2012-05-28  Sancho Lerena <slerena@artica.es>

	* godmode/agentes/module_manager_editor_plugin.php: A bit more
	space on IP target field (a URL doesn't fit there!). 

	* include/styles/pandora.css: Plugin description is not shown
	in small font.

2012-05-28  Vanessa Gil <vanessa.gil@artica.es>